--- a/SC-BOOK-CONFIG/config-info-dev.yml
+++ b/SC-BOOK-CONFIG/config-info-dev.yml
@@ -1,3 +1,4 @@
 com:
   hujiahao:
-    client: I am the git configuration file from dev environment.
+    client: 
+      config: I am the git configuration file from dev environment.
